--- a/설무아튜터/2_할리스_매장정보_수집.ipynb
+++ b/설무아튜터/2_할리스_매장정보_수집.ipynb
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -324,60 +324,60 @@
      "text": [
       "📄 1페이지 수집 중...\n",
       "본문 수집 실패 (): Invalid URL '': No scheme supplied. Perhaps you meant https://?\n",
-      "📄 2페이지 수집 중...\n",
-      "본문 수집 실패 (): Invalid URL '': No scheme supplied. Perhaps you meant https://?\n",
-      "✅ aitimes_ai_news.json 저장 완료 (42개 기사)\n",
-      "\n",
-      "📊 날짜별 기사 수:\n",
-      "date\n",
-      "               2\n",
-      "10-27 18:00    1\n",
-      "10-27 16:40    1\n",
-      "10-27 13:05    1\n",
-      "10-24 17:00    1\n",
-      "10-24 15:52    1\n",
-      "10-23 16:54    1\n",
-      "10-22 12:44    1\n",
-      "10-29 15:45    1\n",
-      "10-02 14:09    1\n",
-      "10-01 06:00    1\n",
-      "09-26 10:05    1\n",
-      "09-30 18:11    1\n",
-      "09-16 18:50    1\n",
-      "09-15 16:50    1\n",
-      "09-15 16:14    1\n",
-      "09-18 18:30    1\n",
-      "09-13 14:50    1\n",
-      "09-13 10:20    1\n",
-      "09-11 15:40    1\n",
-      "09-10 16:05    1\n",
-      "09-09 17:00    1\n",
-      "09-09 12:27    1\n",
-      "09-08 16:30    1\n",
-      "09-08 16:05    1\n",
-      "09-05 16:00    1\n",
-      "09-04 14:50    1\n",
-      "09-03 16:15    1\n",
-      "09-01 14:50    1\n",
-      "08-29 17:05    1\n",
-      "08-29 16:35    1\n",
-      "08-29 12:20    1\n",
-      "08-28 11:41    1\n",
-      "08-25 10:50    1\n",
-      "08-24 16:25    1\n",
-      "08-22 16:58    1\n",
-      "08-22 16:00    1\n",
-      "08-20 07:35    1\n",
-      "08-19 16:30    1\n",
-      "08-17 16:45    1\n",
-      "08-15 07:26    1\n",
-      "Name: count, dtype: int64\n",
-      "\n",
-      "📰 최신 기사:\n",
-      "                                              title         date reporter\n",
-      "0                과기부, APEC 한-미 정상회담서 AI기술 협력 MOU 체결  10-29 15:45   장세민 기자\n",
-      "1  APEC CEO 서밋에 글로벌 기업인 1700명 참여...\"K-산업 미래 청사진 제시\"  10-27 18:00   장세민 기자\n",
-      "2         과기부, 'AI 노코드 해커톤' 개최...\"20세 이상 누구나 참여 가능\"  10-27 16:40   장세민 기자\n"
+      "📄 2페이지 수집 중...\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCannot execute code, session has been disposed. Please try restarting the Kernel."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to connect to the remote Jupyter Server 'http://127.0.0.1:8888/'. Verify the server is running and reachable."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCannot execute code, session has been disposed. Please try restarting the Kernel. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -515,6 +515,7 @@
      "text": [
       "📄 1페이지 수집 중...\n",
       "📄 2페이지 수집 중...\n",
+      "본문 수집 실패 (https://www.aitimes.com/news/articleView.html?idxno=202249): HTTPSConnectionPool(host='www.aitimes.com', port=443): Max retries exceeded with url: /news/articleView.html?idxno=202249 (Caused by NewConnectionError('<urllib3.connection.HTTPSConnection object at 0x000001F7E5CCF7D0>: Failed to establish a new connection: [WinError 10014] 호출에 대한 포인터 인수를 사용하려는 동안 시스템에서 잘못된 포인터 주소를 감지했습니다'))\n",
       "✅ aitimes_ai_news.json 저장 완료 (42개 기사)\n",
       "\n",
       "📊 날짜별 기사 수:\n",
@@ -659,8 +660,6 @@
     "        for article in articles:\n",
     "            article[\"content\"] = get_article_content(article[\"url\"])\n",
     "            all_articles.append(article)\n",
-    "        sleep(0.\n",
-    "              1)\n",
     "\n",
     "    return all_articles\n",
     "\n",
@@ -692,18 +691,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.9"
   }
  },
  "nbformat": 4,
