--- a/설무아튜터/과제3.ipynb
+++ b/설무아튜터/과제3.ipynb
@@ -2,10 +2,73 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "bfa1a437",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📄 1페이지 수집 중...\n",
+      "본문 수집 실패 (): Invalid URL '': No scheme supplied. Perhaps you meant https://?\n",
+      "📄 2페이지 수집 중...\n",
+      "본문 수집 실패 (): Invalid URL '': No scheme supplied. Perhaps you meant https://?\n",
+      "✅ aitimes_ai_news.json 저장 완료 (42개 기사)\n",
+      "\n",
+      "📊 날짜별 기사 수:\n",
+      "date\n",
+      "               2\n",
+      "10-27 18:00    1\n",
+      "10-27 16:40    1\n",
+      "10-27 13:05    1\n",
+      "10-24 17:00    1\n",
+      "10-24 15:52    1\n",
+      "10-23 16:54    1\n",
+      "10-22 12:44    1\n",
+      "10-29 15:45    1\n",
+      "10-02 14:09    1\n",
+      "10-01 06:00    1\n",
+      "09-26 10:05    1\n",
+      "09-30 18:11    1\n",
+      "09-16 18:50    1\n",
+      "09-15 16:50    1\n",
+      "09-15 16:14    1\n",
+      "09-18 18:30    1\n",
+      "09-13 14:50    1\n",
+      "09-13 10:20    1\n",
+      "09-11 15:40    1\n",
+      "09-10 16:05    1\n",
+      "09-09 17:00    1\n",
+      "09-09 12:27    1\n",
+      "09-08 16:30    1\n",
+      "09-08 16:05    1\n",
+      "09-05 16:00    1\n",
+      "09-04 14:50    1\n",
+      "09-03 16:15    1\n",
+      "09-01 14:50    1\n",
+      "08-29 17:05    1\n",
+      "08-29 16:35    1\n",
+      "08-29 12:20    1\n",
+      "08-28 11:41    1\n",
+      "08-25 10:50    1\n",
+      "08-24 16:25    1\n",
+      "08-22 16:58    1\n",
+      "08-22 16:00    1\n",
+      "08-20 07:35    1\n",
+      "08-19 16:30    1\n",
+      "08-17 16:45    1\n",
+      "08-15 07:26    1\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "📰 최신 기사:\n",
+      "                                              title         date reporter\n",
+      "0                과기부, APEC 한-미 정상회담서 AI기술 협력 MOU 체결  10-29 15:45   장세민 기자\n",
+      "1  APEC CEO 서밋에 글로벌 기업인 1700명 참여...\"K-산업 미래 청사진 제시\"  10-27 18:00   장세민 기자\n",
+      "2         과기부, 'AI 노코드 해커톤' 개최...\"20세 이상 누구나 참여 가능\"  10-27 16:40   장세민 기자\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
@@ -97,7 +160,7 @@
     "        for article in articles:\n",
     "            article[\"content\"] = get_article_content(article[\"url\"])\n",
     "            all_articles.append(article)\n",
-    "            sleep(1)  # 서버 과부하 방지\n",
+    "        sleep(0.1)  # 서버 과부하 방지\n",
     "\n",
     "    return all_articles\n",
     "\n",
@@ -128,6 +191,150 @@
     "    save_to_json(data)\n",
     "    summarize_articles(data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60dbe3ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.chdir(r\"C:\\Users\\lizzy\\스파르타_파이썬\\설무아튜터\")\n",
+    "print(os.getcwd())  # 잘 바뀌었는지 확인"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f97ff088",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import pandas as pd\n",
+    "import json\n",
+    "from time import sleep\n",
+    "from urllib.parse import urljoin\n",
+    "\n",
+    "BASE_URL = \"https://www.aitimes.com\"\n",
+    "\n",
+    "def get_article_list(page: int = 1, section_code: str = \"S1N1\") -> list:\n",
+    "    \"\"\"\n",
+    "    AI타임즈 뉴스 목록 페이지에서 기사 정보 추출\n",
+    "    \"\"\"\n",
+    "    base_url = \"https://www.aitimes.com/news/articleList.html\"\n",
+    "    params = {\n",
+    "        \"page\": str(page),\n",
+    "        \"sc_section_code\": section_code,\n",
+    "        \"view_type\": \"sm\"\n",
+    "    }\n",
+    "    headers = {\n",
+    "        'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) '\n",
+    "                      'AppleWebKit/537.36 (KHTML, like Gecko) '\n",
+    "                      'Chrome/141.0.0.0 Safari/537.36'\n",
+    "    }\n",
+    "\n",
+    "    response = requests.get(base_url, params=params, headers=headers)\n",
+    "    response.raise_for_status()\n",
+    "\n",
+    "    soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "    articles = []\n",
+    "\n",
+    "    # 기사 블록 선택\n",
+    "    for div in soup.select(\"div.altlist-webzine-content\"):\n",
+    "        title_tag = div.select_one(\"h2.altlist-subject a\")\n",
+    "        info_items = div.select(\"div.altlist-info-item\")\n",
+    "\n",
+    "        if not title_tag or len(info_items) < 2:\n",
+    "            continue\n",
+    "\n",
+    "        title = title_tag.get_text(strip=True)\n",
+    "        relative_url = title_tag[\"href\"]\n",
+    "        url = urljoin(BASE_URL, relative_url)   # ✅ 절대경로 변환\n",
+    "        reporter = info_items[0].get_text(strip=True)\n",
+    "        date = info_items[1].get_text(strip=True)\n",
+    "\n",
+    "        articles.append({\n",
+    "            \"title\": title,\n",
+    "            \"url\": url,\n",
+    "            \"reporter\": reporter,\n",
+    "            \"date\": date\n",
+    "        })\n",
+    "\n",
+    "    return articles\n",
+    "\n",
+    "\n",
+    "def get_article_content(url: str) -> str:\n",
+    "    \"\"\"\n",
+    "    개별 기사 URL에서 본문 텍스트 추출\n",
+    "    \"\"\"\n",
+    "    headers = {\n",
+    "        'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) '\n",
+    "                      'AppleWebKit/537.36 (KHTML, like Gecko) '\n",
+    "                      'Chrome/141.0.0.0 Safari/537.36'\n",
+    "    }\n",
+    "\n",
+    "    try:\n",
+    "        response = requests.get(url, headers=headers, timeout=10)\n",
+    "        response.raise_for_status()\n",
+    "        soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "\n",
+    "        # ✅ 본문은 article 태그 안의 p 태그들\n",
+    "        paragraphs = soup.select(\"article.article-veiw-body.view-page.font-size18 p\")\n",
+    "        content = \"\\n\".join(p.get_text(strip=True) for p in paragraphs)\n",
+    "\n",
+    "        return content\n",
+    "    except Exception as e:\n",
+    "        print(f\"본문 수집 실패 ({url}): {e}\")\n",
+    "        return \"\"\n",
+    "\n",
+    "\n",
+    "def crawl_ai_news(pages: int = 3):\n",
+    "    \"\"\"\n",
+    "    여러 페이지에 걸쳐 AI 뉴스 기사 수집\n",
+    "    \"\"\"\n",
+    "    all_articles = []\n",
+    "\n",
+    "    for page in range(1, pages + 1):\n",
+    "        print(f\"📄 {page}페이지 수집 중...\")\n",
+    "        articles = get_article_list(page)\n",
+    "\n",
+    "        for article in articles:\n",
+    "            article[\"content\"] = get_article_content(article[\"url\"])\n",
+    "            all_articles.append(article)\n",
+    "        sleep(0.1)  # 페이지 단위로만 살짝 쉬기\n",
+    "\n",
+    "    return all_articles\n",
+    "\n",
+    "\n",
+    "def save_to_json(data: list, filename: str = \"aitimes_ai_news2.json\"):\n",
+    "    \"\"\"\n",
+    "    결과 데이터를 JSON 파일로 저장\n",
+    "    \"\"\"\n",
+    "    with open(filename, \"w\", encoding=\"utf-8\") as f:\n",
+    "        json.dump(data, f, ensure_ascii=False, indent=4)\n",
+    "    print(f\"✅ {filename} 저장 완료 ({len(data)}개 기사)\")\n",
+    "\n",
+    "\n",
+    "def summarize_articles(data: list):\n",
+    "    \"\"\"\n",
+    "    날짜별 기사 수 등 간단한 통계 출력\n",
+    "    \"\"\"\n",
+    "    df = pd.DataFrame(data)\n",
+    "    print(\"\\n📊 날짜별 기사 수:\")\n",
+    "    print(df[\"date\"].value_counts())\n",
+    "\n",
+    "    print(\"\\n📰 최신 기사:\")\n",
+    "    print(df.head(3)[[\"title\", \"date\", \"reporter\"]])\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    data = crawl_ai_news(pages=2)  # 원하는 페이지 수 조정\n",
+    "    save_to_json(data)\n",
+    "    summarize_articles(data)\n"
+   ]
   }
  ],
  "metadata": {
@@ -135,18 +342,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.9"
   }
  },
  "nbformat": 4,
